--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+
+input{
+  padding: 12px 20px;
+  margin: 8px ;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit]{
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width :100px;
+  }
+  
+input[type=submit]:hover{
+      background-color: aquamarine;
+  }
+
+.boxSize, .color {
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.container {
+  margin-top: 50px;
+}
